[package]
name = "mycelium-std-spore"
version.workspace = true
description = "std.spore — the content-addressed deployable + reconstruction-manifest library surface over the mycelium-spore packager (M-522)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }
mycelium-std-core = { git = "https://github.com/tzervas/mycelium-std-core", rev = "580b64316774e22f0b7d5d495ca1d9b9d6536a60" }
mycelium-std-content = { git = "https://github.com/tzervas/mycelium-std-content", rev = "792eb7fe476ebf50bae1d8a20e3a7fba83a16d8b" }
mycelium-std-vsa = { git = "https://github.com/tzervas/mycelium-std-vsa", rev = "514798245c507d515c3a53ea1ec4152b409e821d" }
mycelium-std-numerics = { git = "https://github.com/tzervas/mycelium-std-numerics", rev = "cdfb2cdef08818091d47ec99f592947c1ccc4085" }
mycelium-spore = { git = "https://github.com/tzervas/mycelium-spore", rev = "12f117d395545ee89ba144eb858de11f0b36ab16" }
mycelium-proj = { git = "https://github.com/tzervas/mycelium-proj", rev = "cfc934b32c0b7b57becbb7ddfe3c516712c6ec0e" }
mycelium-vsa = { git = "https://github.com/tzervas/mycelium-value", rev = "fce92daed05e9f10202c202648ec43fb0a6991d7" }
# blake3 is already a vetted workspace dependency (mycelium-core, mycelium-spore)
blake3.workspace = true
# serde_json is used for canonical manifest hashing (ReconManifest::manifest_hash)
serde_json.workspace = true

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-std-spore"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
